Add role and a playbook for flatmanager

--- a/inventory/host_vars/build-server.yaml
+++ b/inventory/host_vars/build-server.yaml
@@ -20,6 +20,8 @@ users:
     key: https://github.com/tim77.keys
   - name: xvitaly
     key: https://github.com/xvitaly.keys
+  - name: gasinvein
+    key: https://github.com/gasinvein.keys
 
 required_packages:
   - mock
